fix alignment issue

--- a/sass/single-form-setting.scss
+++ b/sass/single-form-setting.scss
@@ -179,8 +179,7 @@
 							position: relative;
 							.srfm-scroll-dropdown {
 								position: absolute;
-								top: 0;
-								right: 0;
+								right: 2px;
 								.has-icon {
 									min-height: 41px;
 
